fix z-index

--- a/www-develop/css/category-picker.css
+++ b/www-develop/css/category-picker.css
@@ -7,6 +7,7 @@
     border-radius: 3px;
     float: left;
     width: calc(100% - 15px);
+    z-index: 100;
 }
 
 .category-list.open {
